tests/cli/snapshots/cli_tests__cli__snapshot_helpers__install_invalid_skill_id.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Installing skills...

Error: Configuration error: project-level skill-project.toml requires [tool.fastskill] with skills_directory. Run 'fastskill project init --skills-dir <path>' at project root or add it manually.
