tests/cli/snapshots/cli_tests__cli__snapshot_helpers__install_missing_project_cli.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Error: Configuration error: skill-project.toml not found in this directory or any parent. Create it at the top level of your workspace (e.g. run 'fastskill project init' there), then run this command again.
