tests/cli/snapshots/cli_tests__cli__snapshot_helpers__install_with_lock.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 262
expression: normalized
---
Installing skills...

Using lock file (4 skills)
Found 4 skills to install
  Installing web-scraper (depth 0)...
  Installing dev-tools (depth 0)...
  Installing local-skill (depth 0)...
  Installing remote-skill (depth 0)...
[ERROR] No skills were installed
   skills.lock was not modified
