tests/cli/snapshots/cli_tests__cli__snapshot_helpers__install_without_dev.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 262
expression: normalized
---
Installing skills...

Found 4 skills to install
  Installing dev-tools (depth 0)...
  Installing local-skill (depth 0)...
  Installing remote-skill (depth 0)...
  Installing web-scraper (depth 0)...
[ERROR] No skills were installed
   skills.lock was not modified
  [ERROR] Failed to install dev-tools: Git clone failed: Custom error: Failed to clone repository https://github.com/org/dev-tools.git: Custom error: Git command failed: [GIT_NETWORK_ERROR]

  [ERROR] Failed to install local-skill: Invalid skill source: Local path does not exist: [TEMP_DIR]
  [ERROR] Failed to install remote-skill: Invalid skill source: Failed to download 'https://example.com/skill.zip': error sending request for url (https://example.com/skill.zip): error trying to connect: tcp connect error: [NETWORK_ERROR]
  [ERROR] Failed to install web-scraper: Configuration error: Sources manager required for source-based installation
Error: Configuration error: Failed to install 4 skill(s): dev-tools, local-skill, remote-skill, web-scraper
