tests/cli/snapshots/cli_tests__cli__snapshot_helpers__list_conflicting_flags.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
{"error":{"message":"Configuration error: --json and --format cannot be used together; use one output selector"},"success":false}
Error: Configuration error: --json and --format cannot be used together; use one output selector
