tests/cli/snapshots/cli_tests__cli__snapshot_helpers__list_default_grid.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 262
expression: normalized
---
No skills found.
