tests/cli/snapshots/cli_tests__cli__snapshot_helpers__list_empty_skills_directory.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
No skills found.
