tests/cli/snapshots/cli_tests__cli__snapshot_helpers__list_missing_dependencies.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---

ID           Name         Description  Flags
-----------------------------------------------------------------------------
dev-tools    dev-tools    -            missing from folder; missing from lock
web-scraper  web-scraper  -            missing from folder; missing from lock
